--- a/src/index.css
+++ b/src/index.css
@@ -1744,10 +1744,12 @@ ul.about-listing {
 }
 .footer-widget .title h3 {
 	color: #fff;
+	opacity: 0.8;
 }
 .footer-widget p {
 	color: #fff;
 	margin-bottom: 20px;
+	opacity: 0.8;
 }
 .footer-icon {
 	color: #fff;
@@ -3004,6 +3006,8 @@ color: #fff;
 .contact-info-two ul li h4{
     margin-bottom: 10px;
     font-weight: 500;
+	color: white;
+	opacity: 0.8;
 }
 .contact-info-two ul li p{
 	margin: 0;
